1998-11-20  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (read_byte_array, read_char_array): When reading from
          handle-streams, use `full_read' not `read', because `full_read'
          handles EFAULT gracefully.

1998-11-07  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (base_char_int_len, base_char_int_limit, bcint,
          base_char_code_limit, base_char_p): New definitions.
        * charstrg.d (SYS::BASE-CHAR-P): New function.
        * predtype.d (TYPE-OF): May return [SIMPLE-]BASE-STRING instead of
          [SIMPLE-]STRING, and BASE-CHAR instead of CHARACTER.
          (COERCE): Treat BASE-CHAR, BASE-STRING, SIMPLE-BASE-STRING.
        * sequence.d (valid_type): Treat BASE-STRING, SIMPLE-BASE-STRING.
        * defs1.lsp (base-char-code-limit): Define.
        * defs2.lsp (designator): Recognize (DESIGNATOR BASE-CHAR).
        * type.lsp: New types BASE-CHAR, EXTENDED-CHAR, BASE-STRING,
          SIMPLE-BASE-STRING.
          (canonicalize-type): Force STANDARD-CHAR to be a subtype of
          BASE-CHAR.
        * compiler.lsp (*declaration-types*): Add base-char, base-string,
          extended-char, simple-base-string.
          (c-typep-alist1): Add base-string, simple-base-string.
          (c-typep-alist2): Add base-char, extended-char.
          (c-typep-alist3): Add base-string, simple-base-string.
        * init.lsp: Export base-char, base-string, extended-char,
          simple-base-string.
        * defs3.lsp: Likewise.

1998-11-05  Sam Steingold  <sds@goems.com>

        * loop.lsp (expand-loop): allow `by' to precede `upto' &c.

1998-11-05  Sam Steingold  <sds@goems.com>

	* type.lsp (canonicalize-type): handle `SIGNED-BYTE' and
	  `UNSIGNED-BYTE', thus recognize them as subtypes of `INTEGER'.

1998-11-01  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Replace STRING-CHAR with CHARACTER.
        * array.d (eltype_code): No need to test for STRING-CHAR, the SUBTYPEP