@@ -1,3 +1,9 @@
+1998-12-08  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>
+
+        * makemake.in (MODULES): New variables. Accept --with-module=MODULE
+          syntax.
+        * configure: Update.
+
 1998-11-20  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>
 
         * stream.d (read_byte_array, read_char_array): When reading from
